--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -124,7 +124,7 @@
 <body>
     <!-- Main Content -->
     <div class="container">
-        <div class="team-spy">Team SPY</div>
+        <div class="team-spy">Warrior Units Bots</div>
         <div class="bot-status">⚡ Bot is Live ⚡</div>
 
         <div class="actions">
@@ -134,4 +134,5 @@
     </div>
 </body>
 </html>
+
 
